@@ -91,6 +91,8 @@ static void gmp_free(void *ptr, size_t size)
 
 void mosh_init()
 {
+    // MOSH_GENSYM_PREFIX needs this.
+    srand(time(NULL));
 #ifdef USE_BOEHM_GC
     GC_INIT();
     // N.B
@@ -111,5 +113,13 @@ void mosh_init()
     WSAStartup(MAKEWORD(2, 2), &data);
 #endif
     initOSConstants();
+
+    // psyntax pre-compilation requires MOSH_GENSYM_PREFIX
+    if (NULL == getEnv(UC("MOSH_GENSYM_PREFIX"))) {
+        const char* data = "abcdefghijklmopqrstuvwxyzABCDEFGHIJKLMOPQRSTUVWXYZ";
+        ucs4char prefix = data[rand() % (strlen(data) - 1)];
+        printf("[%c]", prefix);
+        setEnv(UC("MOSH_GENSYM_PREFIX"), &prefix);
+    }
 }
 
