@@ -1,1 +1,8 @@
-(import (mosh socket))
+(import (mosh)
+        (rnrs)
+        (mosh file)
+        (srfi :98))
+
+
+
+(display (create-mosh-cache-dir))
