@@ -1,3 +1,7 @@
+2009-07-17  higepon  <higepon@users.sourceforge.jp>
+
+        * Added auto-compilation mode (experimental).
+
 2009-07-13  higepon  <higepon@users.sourceforge.jp>
 
         * Rewrote join-wraps in C++.
